@@ -1,7 +1,6 @@
 package common.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.jws.WebService;
 import javax.validation.Validator;
@@ -15,7 +14,8 @@ import org.springframework.stereotype.Service;
 
 import common.Constants;
 import common.dao.UserDao;
-import common.exception.DBException;
+import common.exception.DatabaseException;
+import common.model.Role;
 import common.model.User;
 import common.service.PasswordTokenManager;
 import common.service.RoleManager;
@@ -57,6 +57,24 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
     private Validator validator;
 
     /**
+     * デフォルト・コンストラクタ.
+     */
+    public UserManagerImpl() {
+    }
+
+    /**
+     * コンストラクタ.
+     *
+     * @param userDao
+     *            ユーザDAO
+     */
+    @Autowired
+    public UserManagerImpl(UserDao userDao) {
+        super(userDao);
+        this.userDao = userDao;
+    }
+
+    /**
      * {@inheritDoc}
      */
     @Override
@@ -69,7 +87,7 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
      */
     @Override
     public User getUser(String userId) {
-        return userDao.get(new Long(userId));
+        return userDao.get(Long.valueOf(userId));
     }
 
     /**
@@ -123,15 +141,16 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
         }
 
         try {
+            user.setRoles(roleManager.getRoles(user.getRoles()));
             return userDao.saveUser(user);
         } catch (Exception e) {
             user.setPassword(null);
             user.setConfirmPassword(null);
 
             if (user.getVersion() == null) {
-                throw new DBException("errors.insert", e);
+                throw new DatabaseException("errors.insert", e);
             } else {
-                throw new DBException("errors.update", e);
+                throw new DatabaseException("errors.update", e);
             }
         }
     }
@@ -149,7 +168,7 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
      */
     @Override
     public void removeUser(String userId) {
-        userDao.remove(new Long(userId));
+        userDao.remove(Long.valueOf(userId));
     }
 
     /**
@@ -163,8 +182,7 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
             // デフォルトの要再認証日時を設定する
             user.setCredentialsExpiredDate(new DateTime().plusDays(Constants.CREDENTIALS_EXPIRED_TERM).toDate());
             // 新規登録時は権限を一般で設定する
-            user.getRoles().clear();
-            user.addRole(roleManager.getRole(Constants.USER_ROLE));
+            user.addRole(new Role(Constants.USER_ROLE));
             user.setConfirmPassword(user.getPassword());
             user.setEnabled(true);
 
@@ -186,8 +204,7 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
         // デフォルトの要再認証日時を設定する
         user.setCredentialsExpiredDate(new DateTime().plusDays(Constants.CREDENTIALS_EXPIRED_TERM).toDate());
         // 新規登録時は権限を一般で設定する
-        user.getRoles().clear();
-        user.addRole(roleManager.getRole(Constants.USER_ROLE));
+        user.addRole(new Role(Constants.USER_ROLE));
         user = saveUser(user);
 
         // 登録完了メールを送信する
@@ -262,18 +279,7 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
      * {@inheritDoc}
      */
     @Override
-    public void activateRoles(User user) {
-        user.setRoles(user.getRoles().stream().map(role -> roleManager.getRole(role.getName())).collect(Collectors.toSet()));
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Autowired
-    @Override
     public void setUserDao(UserDao userDao) {
-        this.dao = userDao;
-        this.paginatedDao = userDao;
         this.userDao = userDao;
     }
 
@@ -283,5 +289,13 @@ public class UserManagerImpl extends PaginatedManagerImpl<User, Long> implements
     @Override
     public void setPasswordEncoder(PasswordEncoder passwordEncoder) {
         this.passwordEncoder = passwordEncoder;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void setRoleManager(RoleManager roleManager) {
+        this.roleManager = roleManager;
     }
 }
